chore: 🤖 upgrade to react@19 & rehype plugins

--- a/package.json
+++ b/package.json
@@ -52,36 +52,36 @@
     "geist": "1.3.1",
     "lucide-react": "^0.456.0",
     "next": "15.3.2",
-    "next-mdx-remote": "^4.4.1",
+    "next-mdx-remote": "5.0.0",
     "next-themes": "0.3.0",
     "posthog-js": "^1.180.1",
     "posthog-node": "^4.2.1",
-    "react": "18.3.1",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "rss": "^1.2.2",
     "sharp": "0.33.5",
-    "shiki": "^0.14.7",
+    "shiki": "3.4.2",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "19.6.0",
     "@commitlint/config-conventional": "19.6.0",
-    "@playwright/test": "^1.48.2",
+    "@playwright/test": "1.52.0",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.5.2",
     "@types/node": "22.7.5",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.2.25",
+    "@types/react": "19.1.5",
+    "@types/react-dom": "19.1.5",
     "@types/rss": "^0.0.32",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/parser": "8.32.1",
     "@vitejs/plugin-react": "4.3.3",
     "@vitest/coverage-istanbul": "2.1.3",
     "autoprefixer": "^10.4.20",
     "commitlint": "19.6.0",
     "cspell": "8.15.1",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.1.0",
+    "eslint": "9.27.0",
+    "eslint-config-next": "15.3.2",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.31.0",
     "git-cz": "4.9.0",
@@ -92,12 +92,12 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "rehype": "^13.0.1",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-pretty-code": "^0.10.2",
+    "rehype-pretty-code": "0.14.1",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^3.0.1",
+    "remark-gfm": "4.0.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.7.2",
+    "typescript": "5.8.3",
     "vite-tsconfig-paths": "^5.1.2",
     "vitest": "^2.1.3"
   }
