--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
-    "lint:fix": "pnpm lint -- --fix",
+    "lint:fix": "pnpm lint --fix",
     "precommit": "pnpm spell && pnpm lint && pnpm format",
     "prepush": "pnpm typecheck && vitest --run",
     "prepare": "husky install",
@@ -67,9 +67,9 @@
     "@commitlint/cli": "19.6.0",
     "@commitlint/config-conventional": "19.6.0",
     "@playwright/test": "1.52.0",
-    "@testing-library/jest-dom": "6.5.0",
-    "@testing-library/react": "16.0.1",
-    "@testing-library/user-event": "14.5.2",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "22.7.5",
     "@types/react": "19.1.5",
     "@types/react-dom": "19.1.5",
@@ -87,6 +87,7 @@
     "git-cz": "4.9.0",
     "happy-dom": "^15.11.7",
     "husky": "^8.0.3",
+    "msw": "2.8.4",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
@@ -99,6 +100,6 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.8.3",
     "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^2.1.3"
+    "vitest": "3.1.4"
   }
 }
