--- a/package.json
+++ b/package.json
@@ -35,71 +35,72 @@
     "typecheck": "tsc --pretty"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "front-matter": "^4.0.2",
+    "@radix-ui/react-accordion": "1.2.11",
+    "@radix-ui/react-aspect-ratio": "1.1.7",
+    "@radix-ui/react-avatar": "1.1.10",
+    "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-dropdown-menu": "2.1.15",
+    "@radix-ui/react-label": "2.1.7",
+    "@radix-ui/react-navigation-menu": "1.2.13",
+    "@radix-ui/react-separator": "1.1.7",
+    "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-tooltip": "1.2.7",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
+    "front-matter": "4.0.2",
     "geist": "1.3.1",
-    "lucide-react": "^0.456.0",
+    "lucide-react": "0.456.0",
     "next": "15.3.2",
     "next-mdx-remote": "5.0.0",
-    "next-themes": "0.3.0",
-    "posthog-js": "^1.180.1",
-    "posthog-node": "^4.2.1",
+    "next-themes": "0.4.6",
+    "posthog-js": "1.245.1",
+    "posthog-node": "4.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rss": "^1.2.2",
+    "rss": "1.2.2",
     "sharp": "0.33.5",
     "shiki": "3.4.2",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "2.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.6.0",
     "@commitlint/config-conventional": "19.6.0",
     "@playwright/test": "1.52.0",
+    "@tailwindcss/postcss": "4.1.7",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
     "@types/node": "22.7.5",
     "@types/react": "19.1.5",
     "@types/react-dom": "19.1.5",
-    "@types/rss": "^0.0.32",
+    "@types/rss": "0.0.32",
     "@typescript-eslint/parser": "8.32.1",
-    "@vitejs/plugin-react": "4.3.3",
-    "@vitest/coverage-istanbul": "2.1.3",
-    "autoprefixer": "^10.4.20",
+    "@vitejs/plugin-react": "4.4.1",
+    "@vitest/coverage-istanbul": "3.1.4",
     "commitlint": "19.6.0",
     "cspell": "8.15.1",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-import-resolver-typescript": "3.10.1",
+    "eslint-plugin-import": "2.31.0",
     "git-cz": "4.9.0",
-    "happy-dom": "^15.11.7",
-    "husky": "^8.0.3",
+    "happy-dom": "15.11.7",
+    "husky": "8.0.3",
     "msw": "2.8.4",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "rehype": "^13.0.1",
-    "rehype-autolink-headings": "^7.1.0",
+    "postcss": "8.5.3",
+    "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "rehype": "13.0.2",
+    "rehype-autolink-headings": "7.1.0",
     "rehype-pretty-code": "0.14.1",
-    "rehype-slug": "^6.0.0",
+    "rehype-slug": "6.0.0",
     "remark-gfm": "4.0.1",
-    "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "4.1.7",
+    "tailwindcss-animate": "1.0.7",
+    "tw-animate-css": "1.3.0",
     "typescript": "5.8.3",
-    "vite-tsconfig-paths": "^5.1.2",
+    "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.1.4"
   }
 }
