--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,7 @@
 name: Build
+permissions:
+  contents: read
+  pull-requests: write
 
 on:
   - pull_request
@@ -11,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
         with:
-          version: 9.10.0 # match package.json:packageManager version.
+          version: 10.11.0 # match package.json:packageManager version.
       - uses: actions/setup-node@v4
         with:
           node-version: 22
