--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,4 +1,9 @@
 name: E2E Tests
+
+permissions:
+  contents: read
+  pull-requests: write
+
 on:
   push:
     branches: [main]
@@ -12,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
         with:
-          version: 9.10.0 # match package.json:packageManager version.
+          version: 10.11.0 # match package.json:packageManager version.
       - uses: actions/setup-node@v4
         with:
           node-version: 22
