--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": ["next lint --fix", "pnpm format"],
+    "*.{ts,tsx}": [
+      "next lint --fix",
+      "pnpm format"
+    ],
     "*.md": "prettier --list-different"
   },
   "scripts": {
@@ -55,6 +58,7 @@
     "front-matter": "4.0.2",
     "geist": "1.4.2",
     "lucide-react": "0.562.0",
+    "neverthrow": "8.2.0",
     "next": "15.4.10",
     "next-mdx-remote": "5.0.0",
     "next-themes": "0.4.6",
